--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="assets/css/base.css" />
-    <link rel="stylesheet" href="assets/css/projects.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./assets/css/base.css" />
+    <link rel="stylesheet" href="./assets/css/projects.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
 </head>
@@ -128,7 +128,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -143,7 +143,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -158,7 +158,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -173,7 +173,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -188,7 +188,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -203,7 +203,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                                <img src="/./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -229,6 +229,6 @@
         </footer>
     </main>
 
-    <script src="assets/js/header.js"></script>
+    <script src="./assets/js/header.js"></script>
 </body>
 </html>
