Fixed Project image links

--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -143,7 +143,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -158,7 +158,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -173,7 +173,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -188,7 +188,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -203,7 +203,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="/./assets/img/content.jpg" alt="#" />
+                                <img src="./assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
