Started Single Project Page; favicons; new project cards

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#023815">
+    <meta name="theme-color" content="#023815">
+
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap-grid.css" />
@@ -114,6 +131,15 @@
 
         <section class="section contact__form">
             <div class="an-container">
+                <div class="notif">
+                    <div class="notif__icon">
+                        <i class="bx bx-error-alt"></i>
+                    </div>
+                    <div class="notif__info">
+                        <h4>Notification</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quidem, corrupti dolorem quo modi deleniti?</p>
+                    </div>
+                </div>
                 <form class="row">
                     <div class="col-lg-6">
                         <div class="form__content">
