--- a/index.html
+++ b/index.html
@@ -101,12 +101,17 @@
                 </ul>
             </div>
 
-            <a href="#" class="login__btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-SignOut">
-                    <path d="M13 12h9m0 0l-3.333-4M22 12l-3.333 4"/><path d="M14 7V5.174a2 2 0 0 0-2.166-1.993l-8 .666A2 2 0 0 0 2 5.84v12.32a2 2 0 0 0 1.834 1.993l8 .667A2 2 0 0 0 14 18.826V17"/>
-                </svg>
-                Login
-            </a>
+            <footer class="header__social">
+                <a href="https://www.instagram.com/jrigg_broadway/">
+                    <i class="bx bxl-instagram"></i>
+                </a>
+                <a href="#">
+                    <i class="bx bxl-facebook-square"></i>
+                </a>
+                <a href="#">
+                    <i class="bx bxl-twitter"></i>
+                </a>
+            </footer>
         </nav>
     </header>
 
