Made project singular responsive.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 </head>
-<body>
+<body style="overflow: hidden;">
     <header class="header header__home">
         <div class="nav__header">
             <a href="/" class="header__logo"></a>
