--- a/projects.html
+++ b/projects.html
@@ -143,92 +143,104 @@
             <div class="an-container">
                 <div class="row projects__row">
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
-                            </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
-                                <a href="project-singular.html" class="projects__card-btn">
-                                    View Details
-                                    <i class="lni lni-arrow-right"></i>
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
                                 </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                             </div>
                         </div>
                     </div>
