Created Job page. Added Image Banner. Updated Secondary Button Colours and recruitment cards

--- a/recruitment.html
+++ b/recruitment.html
@@ -163,7 +163,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
                                 <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
-                                <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
+                                <a href="/job.html" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
                     </div>
